🗂️ Added README, License and fixed quote block

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/extension-blockquote": "^2.1.11",
     "@tiptap/extension-code": "^2.1.11",
     "@tiptap/extension-code-block": "^2.1.11",
+    "@tiptap/extension-document": "^2.1.11",
     "@tiptap/extension-heading": "^2.1.10",
     "@tiptap/extension-highlight": "^2.1.10",
     "@tiptap/extension-image": "^2.1.10",
@@ -35,6 +36,7 @@
     "@tiptap/extension-paragraph": "^2.1.11",
     "@tiptap/extension-task-item": "^2.1.11",
     "@tiptap/extension-task-list": "^2.1.11",
+    "@tiptap/extension-text": "^2.1.11",
     "@tiptap/extension-underline": "^2.1.11",
     "@tiptap/pm": "^2.1.8",
     "@tiptap/react": "^2.1.10",
@@ -46,6 +48,7 @@
     "eslint-config-react-app": "^7.0.1",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
+    "native-run": "^1.7.3",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
