📦 Archive + Improved Import
Now notes can be imported even if they contain tags or links, still no note linking or actual way to insert tags tho. On top of that, Archive is now available.

--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@tiptap/extension-code": "^2.1.11",
     "@tiptap/extension-code-block": "^2.1.11",
     "@tiptap/extension-document": "^2.1.11",
-    "@tiptap/extension-heading": "^2.1.10",
-    "@tiptap/extension-highlight": "^2.1.10",
-    "@tiptap/extension-image": "^2.1.10",
+    "@tiptap/extension-heading": "^2.1.11",
+    "@tiptap/extension-highlight": "^2.1.11",
+    "@tiptap/extension-image": "^2.1.11",
     "@tiptap/extension-link": "^2.1.11",
     "@tiptap/extension-list-item": "^2.1.11",
     "@tiptap/extension-ordered-list": "^2.1.11",
@@ -39,8 +39,8 @@
     "@tiptap/extension-text": "^2.1.11",
     "@tiptap/extension-underline": "^2.1.11",
     "@tiptap/pm": "^2.1.8",
-    "@tiptap/react": "^2.1.10",
-    "@tiptap/starter-kit": "^2.1.10",
+    "@tiptap/react": "^2.1.11",
+    "@tiptap/starter-kit": "^2.1.11",
     "@types/uuid": "^9.0.3",
     "autoprefixer": "^10.4.15",
     "cordova-plugin-file-opener": "^1.0.0",
@@ -55,6 +55,7 @@
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.29",
     "postcss-nesting": "^12.0.1",
+    "prosemirror-model": "^1.19.3",
     "puppeteer": "^21.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
