🚀 Ui improvements, lists and code blocks
What's new:

1. Improved ui
2. Check lists now work
3. Code Blocks support syntax highlight

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/extension-blockquote": "^2.1.11",
     "@tiptap/extension-code": "^2.1.11",
     "@tiptap/extension-code-block": "^2.1.11",
+    "@tiptap/extension-code-block-lowlight": "^2.1.11",
     "@tiptap/extension-document": "^2.1.11",
     "@tiptap/extension-heading": "^2.1.11",
     "@tiptap/extension-highlight": "^2.1.11",
@@ -45,12 +46,15 @@
     "autoprefixer": "^10.4.15",
     "cordova-plugin-file-opener": "^1.0.0",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.30.0",
     "eslint-config-react-app": "^7.0.1",
     "file-saver": "^2.0.5",
+    "highlight.js": "^11.9.0",
     "html-pdf": "^3.0.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
+    "lowlight": "2.4.0",
     "native-run": "^1.7.3",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.29",
