--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ionic:serve": "vite"
   },
   "dependencies": {
+    "@benrbray/prosemirror-math": "^0.2.2",
     "@capacitor/android": "5.4.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/cli": "5.4.0",
@@ -23,25 +24,28 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic-native/file-opener": "^5.36.0",
     "@ionic/react": "^7.4.1",
+    "@tiptap/extension-code": "^2.0.0-beta.16",
+    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.34",
+    "@tiptap/extension-highlight": "^2.0.0-beta.15",
+    "@tiptap/extension-image": "^2.0.0-beta.15",
+    "@tiptap/extension-link": "^2.0.0-beta.19",
+    "@tiptap/extension-mention": "^2.0.0-beta.68",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.27",
+    "@tiptap/extension-task-item": "^2.0.0-beta.17",
+    "@tiptap/extension-task-list": "^2.0.0-beta.17",
+    "@tiptap/extension-typography": "^2.0.0-beta.14",
+    "@tiptap/extension-underline": "^2.0.0-beta.16",
+    "@tiptap/starter-kit": "^2.0.0-beta.97",
     "@tiptap/extension-blockquote": "^2.1.11",
-    "@tiptap/extension-code": "^2.1.11",
     "@tiptap/extension-code-block": "^2.1.11",
-    "@tiptap/extension-code-block-lowlight": "^2.1.11",
     "@tiptap/extension-document": "^2.1.11",
     "@tiptap/extension-heading": "^2.1.11",
-    "@tiptap/extension-highlight": "^2.1.11",
-    "@tiptap/extension-image": "^2.1.11",
-    "@tiptap/extension-link": "^2.1.11",
     "@tiptap/extension-list-item": "^2.1.11",
     "@tiptap/extension-ordered-list": "^2.1.11",
     "@tiptap/extension-paragraph": "^2.1.11",
-    "@tiptap/extension-task-item": "^2.1.11",
-    "@tiptap/extension-task-list": "^2.1.11",
     "@tiptap/extension-text": "^2.1.11",
-    "@tiptap/extension-underline": "^2.1.11",
     "@tiptap/pm": "^2.1.8",
     "@tiptap/react": "^2.1.11",
-    "@tiptap/starter-kit": "^2.1.11",
     "@types/uuid": "^9.0.3",
     "autoprefixer": "^10.4.15",
     "cordova-plugin-file-opener": "^1.0.0",
@@ -54,12 +58,14 @@
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
+    "katex": "0.13.0",
     "lowlight": "2.4.0",
     "native-run": "^1.7.3",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.29",
     "postcss-nesting": "^12.0.1",
     "prosemirror-model": "^1.19.3",
+    "prosemirror-state": "^1.4.3",
     "puppeteer": "^21.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -67,11 +73,14 @@
     "remixicon": "^3.5.0",
     "remixicon-react": "^1.0.0",
     "tailwindcss": "^3.3.3",
+    "tiptap": "^1.32.2",
+    "tiptap-commands": "^1.17.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
     "@types/html-pdf": "^3.0.1",
+    "@types/katex": "^0.16.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
