--- a/package.json
+++ b/package.json
@@ -13,43 +13,46 @@
   },
   "dependencies": {
     "@benrbray/prosemirror-math": "^0.2.2",
-    "@capacitor/android": "5.4.0",
+    "@capacitor/android": "5.5.1",
     "@capacitor/app": "5.0.6",
-    "@capacitor/cli": "5.4.0",
-    "@capacitor/core": "^5.4.0",
+    "@capacitor/cli": "5.5.1",
+    "@capacitor/core": "^5.5.1",
     "@capacitor/filesystem": "^5.1.4",
     "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "5.4.0",
+    "@capacitor/ios": "5.5.1",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@capawesome/capacitor-file-picker": "^5.1.1",
     "@ionic-native/file-opener": "^5.36.0",
-    "@ionic/react": "^7.4.1",
-    "@tiptap/extension-code": "^2.0.0-beta.16",
-    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.34",
-    "@tiptap/extension-highlight": "^2.0.0-beta.15",
-    "@tiptap/extension-image": "^2.0.0-beta.15",
-    "@tiptap/extension-link": "^2.0.0-beta.19",
+    "@ionic/react": "^7.6.0",
+    "@nytimes/react-prosemirror": "^0.4.2",
+    "@tiptap/extension-blockquote": "^2.1.13",
+    "@tiptap/extension-code": "^2.1.13",
+    "@tiptap/extension-code-block": "^2.1.13",
+    "@tiptap/extension-code-block-lowlight": "^2.1.13",
+    "@tiptap/extension-document": "^2.1.13",
+    "@tiptap/extension-heading": "^2.1.13",
+    "@tiptap/extension-highlight": "^2.1.13",
+    "@tiptap/extension-image": "^2.1.13",
+    "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-list-item": "^2.1.13",
     "@tiptap/extension-mention": "^2.0.0-beta.68",
+    "@tiptap/extension-ordered-list": "^2.1.13",
+    "@tiptap/extension-paragraph": "^2.1.13",
     "@tiptap/extension-placeholder": "^2.0.0-beta.27",
-    "@tiptap/extension-task-item": "^2.0.0-beta.17",
-    "@tiptap/extension-task-list": "^2.0.0-beta.17",
+    "@tiptap/extension-task-item": "^2.1.13",
+    "@tiptap/extension-task-list": "^2.1.13",
+    "@tiptap/extension-text": "^2.1.13",
     "@tiptap/extension-typography": "^2.0.0-beta.14",
-    "@tiptap/extension-underline": "^2.0.0-beta.16",
-    "@tiptap/starter-kit": "^2.0.0-beta.97",
-    "@tiptap/extension-blockquote": "^2.1.11",
-    "@tiptap/extension-code-block": "^2.1.11",
-    "@tiptap/extension-document": "^2.1.11",
-    "@tiptap/extension-heading": "^2.1.11",
-    "@tiptap/extension-list-item": "^2.1.11",
-    "@tiptap/extension-ordered-list": "^2.1.11",
-    "@tiptap/extension-paragraph": "^2.1.11",
-    "@tiptap/extension-text": "^2.1.11",
-    "@tiptap/pm": "^2.1.8",
-    "@tiptap/react": "^2.1.11",
-    "@types/uuid": "^9.0.3",
-    "autoprefixer": "^10.4.15",
+    "@tiptap/extension-underline": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
+    "@types/uuid": "^9.0.7",
+    "autoprefixer": "^10.4.16",
     "cordova-plugin-file-opener": "^1.0.0",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "eslint-config-react-app": "^7.0.1",
     "file-saver": "^2.0.5",
@@ -58,38 +61,39 @@
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
-    "katex": "0.13.0",
+    "katex": "0.16.9",
     "lowlight": "2.4.0",
-    "native-run": "^1.7.3",
+    "native-run": "^2.0.0",
     "normalize.css": "^8.0.1",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.32",
     "postcss-nesting": "^12.0.1",
     "prosemirror-model": "^1.19.3",
     "prosemirror-state": "^1.4.3",
-    "puppeteer": "^21.3.4",
+    "puppeteer": "^21.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "remixicon": "^3.5.0",
+    "react-katex": "^3.0.1",
+    "react-router-dom": "^6.20.1",
+    "remixicon": "^3.6.0",
     "remixicon-react": "^1.0.0",
-    "tailwindcss": "^3.3.3",
     "tiptap": "^1.32.2",
     "tiptap-commands": "^1.17.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.5",
-    "@types/html-pdf": "^3.0.1",
-    "@types/katex": "^0.16.5",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/html-pdf": "^3.0.3",
+    "@types/katex": "^0.16.7",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.7"
   }
 }
