🚀 Settings, Dark mode, Export to PDF

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.5.1",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/share": "^5.0.6",
     "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@capawesome/capacitor-file-picker": "^5.1.1",
@@ -52,17 +53,19 @@
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "cordova-plugin-file-opener": "^1.0.0",
+    "cordova-plugin-printer": "^0.8.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "eslint-config-react-app": "^7.0.1",
     "file-saver": "^2.0.5",
     "highlight.js": "^11.9.0",
     "html-pdf": "^3.0.1",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
     "katex": "0.16.9",
-    "lowlight": "2.4.0",
+    "lowlight": "2.9.0",
     "native-run": "^2.0.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.32",
@@ -74,7 +77,7 @@
     "react-dom": "^18.2.0",
     "react-katex": "^3.0.1",
     "react-router-dom": "^6.21.0",
-    "remixicon": "^3.6.0",
+    "remixicon": "3.7.0",
     "remixicon-react": "^1.0.0",
     "tiptap": "^1.32.2",
     "tiptap-commands": "^1.17.1",
