🔎 Heading Tree & Newer iPhones
The heading tree now closes when any portion of the screen outside of it is tapped or clicked. The padding to accommodate the dynamic island has been added for iPhones.

--- a/package.json
+++ b/package.json
@@ -12,23 +12,20 @@
     "ionic:serve": "vite"
   },
   "dependencies": {
-    "@awesome-cordova-plugins/core": "6.6.0",
-    "@awesome-cordova-plugins/file-opener": "6.6.0",
-    "@awesome-cordova-plugins/printer": "6.6.0",
     "@benrbray/prosemirror-math": "^0.2.2",
-    "@capacitor/android": "5.5.1",
+    "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
-    "@capacitor/cli": "5.5.1",
-    "@capacitor/core": "^5.5.1",
-    "@capacitor/filesystem": "^5.1.4",
+    "@capacitor/cli": "5.6.0",
+    "@capacitor/core": "5.6.0",
+    "@capacitor/filesystem": "5.2.0",
     "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "5.5.1",
-    "@capacitor/keyboard": "5.0.6",
+    "@capacitor/ios": "5.6.0",
+    "@capacitor/keyboard": "5.0.7",
     "@capacitor/share": "^5.0.6",
     "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@capawesome/capacitor-file-picker": "^5.1.1",
-    "@ionic/react": "^7.6.0",
+    "@ionic/react": "7.6.2",
     "@nytimes/react-prosemirror": "^0.4.2",
     "@tiptap/extension-blockquote": "^2.1.13",
     "@tiptap/extension-code": "^2.1.13",
@@ -40,22 +37,20 @@
     "@tiptap/extension-image": "^2.1.13",
     "@tiptap/extension-link": "^2.1.13",
     "@tiptap/extension-list-item": "^2.1.13",
-    "@tiptap/extension-mention": "^2.0.0-beta.68",
+    "@tiptap/extension-mention": "2.1.13",
     "@tiptap/extension-ordered-list": "^2.1.13",
     "@tiptap/extension-paragraph": "^2.1.13",
-    "@tiptap/extension-placeholder": "^2.0.0-beta.27",
+    "@tiptap/extension-placeholder": "2.1.13",
     "@tiptap/extension-task-item": "^2.1.13",
     "@tiptap/extension-task-list": "^2.1.13",
     "@tiptap/extension-text": "^2.1.13",
-    "@tiptap/extension-typography": "^2.0.0-beta.14",
+    "@tiptap/extension-typography": "2.1.13",
     "@tiptap/extension-underline": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
-    "cordova-plugin-file-opener": "^1.0.0",
-    "cordova-plugin-printer": "^0.8.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "eslint-config-react-app": "^7.0.1",
@@ -91,10 +86,10 @@
     "@types/file-saver": "^2.0.7",
     "@types/html-pdf": "^3.0.3",
     "@types/katex": "^0.16.7",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
+    "@typescript-eslint/eslint-plugin": "6.16.0",
+    "@typescript-eslint/parser": "6.16.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
