🚀 Ionic Update, Heading Tree & Funky Experiments

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@capawesome/capacitor-file-picker": "^5.1.1",
+    "@ionic/cli": "^7.1.6",
     "@ionic/react": "7.6.2",
     "@nytimes/react-prosemirror": "^0.4.2",
     "@tiptap/extension-blockquote": "^2.1.13",
@@ -49,9 +50,11 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "@types/d3": "^7.4.3",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "crypto-js": "^4.2.0",
+    "d3": "^7.8.5",
     "date-fns": "^2.30.0",
     "eslint-config-react-app": "^7.0.1",
     "file-saver": "^2.0.5",
@@ -73,6 +76,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-katex": "^3.0.1",
+    "react-portal": "^4.2.2",
     "react-router-dom": "^6.21.0",
     "react-to-pdf": "^1.0.1",
     "remixicon": "3.7.0",
