--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/d3": "^7.4.3",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
+    "capacitor-biometric-auth": "^0.1.1",
     "crypto-js": "^4.2.0",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
