--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -19,6 +19,7 @@ def capacitor_pods
   pod 'CapacitorSplashScreen', :path => '../../node_modules/@capacitor/splash-screen'
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
   pod 'CapawesomeCapacitorFilePicker', :path => '../../node_modules/@capawesome/capacitor-file-picker'
+  pod 'CapacitorBiometricAuth', :path => '../../node_modules/capacitor-biometric-auth'
 end
 
 target 'App' do
