🆔 using capacitor-native-biometric to lock notes

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -24,6 +24,8 @@
 	<true/>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>For an easier and faster authentication.</string>
 	<key>UIFileSharingEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
