🎉 Title Field & iPhone notch
This commit introduces a separate field for the tile, along with a new way of handling the iPhone notch and dynamic island present on the iPhone 14 Pro and onwards.

--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -25,3 +25,9 @@ project(':capacitor-status-bar').projectDir = new File('../node_modules/@capacit
 
 include ':capawesome-capacitor-file-picker'
 project(':capawesome-capacitor-file-picker').projectDir = new File('../node_modules/@capawesome/capacitor-file-picker/android')
+
+include ':capacitor-biometric-auth'
+project(':capacitor-biometric-auth').projectDir = new File('../node_modules/capacitor-biometric-auth/android')
+
+include ':capacitor-native-biometric'
+project(':capacitor-native-biometric').projectDir = new File('../node_modules/capacitor-native-biometric/android')
