--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -17,6 +17,8 @@ dependencies {
     implementation project(':capacitor-splash-screen')
     implementation project(':capacitor-status-bar')
     implementation project(':capawesome-capacitor-file-picker')
+    implementation project(':capacitor-biometric-auth')
+    implementation project(':capacitor-native-biometric')
 
 }
 
