🎉 Share, Lock and Label your notes
Changes:

💬 Exports can now be shared.
🔓 Face ID and Touch ID can now be used to lock notes.
🎨 Minor design enhancements.
🐞 Bug Fixes: The editor now opens in full screen in Settings.
🖋️ Added a separate title field.

--- a/package.json
+++ b/package.json
@@ -52,14 +52,15 @@
     "@tiptap/starter-kit": "^2.1.13",
     "@types/d3": "^7.4.3",
     "@types/uuid": "^9.0.7",
+    "archiver": "^6.0.1",
     "autoprefixer": "^10.4.16",
-    "capacitor-biometric-auth": "^0.1.1",
     "capacitor-native-biometric": "^4.2.2",
     "crypto-js": "^4.2.0",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
     "eslint-config-react-app": "^7.0.1",
     "file-saver": "^2.0.5",
+    "formidable": "v3",
     "highlight.js": "^11.9.0",
     "html-pdf": "^3.0.1",
     "html2canvas": "^1.4.1",
