--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "puppeteer": "^21.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-indexed-db-hook": "^1.0.14",
     "react-katex": "^3.0.1",
     "react-portal": "^4.2.2",
     "react-router-dom": "^6.21.0",
