--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "crypto-js": "^4.2.0",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "eslint-config-react-app": "^7.0.1",
     "file-saver": "^2.0.5",
     "formidable": "v3",
@@ -64,6 +65,7 @@
     "html-pdf": "^3.0.1",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
+    "idb": "^8.0.0",
     "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
     "katex": "0.16.9",
@@ -72,6 +74,7 @@
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.32",
     "postcss-nesting": "^12.0.1",
+    "prosemirror-history": "^1.3.2",
     "prosemirror-model": "^1.19.3",
     "prosemirror-state": "^1.4.3",
     "puppeteer": "^21.6.0",
