--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "@tiptap/suggestion": "^2.1.16",
     "@types/d3": "^7.4.3",
     "@types/uuid": "^9.0.7",
     "archiver": "^6.0.1",
