--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/app": "5.0.6",
     "@capacitor/cli": "5.6.0",
     "@capacitor/core": "5.6.0",
+    "@capacitor/device": "^5.0.6",
     "@capacitor/filesystem": "5.2.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.6.0",
@@ -50,7 +51,9 @@
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "@tiptap/suggestion": "^2.1.16",
+    "@types/crypto-js": "^4.2.1",
     "@types/d3": "^7.4.3",
+    "@types/pbkdf2": "^3.1.2",
     "@types/uuid": "^9.0.7",
     "archiver": "^6.0.1",
     "autoprefixer": "^10.4.16",
@@ -73,6 +76,7 @@
     "lowlight": "2.9.0",
     "native-run": "^2.0.0",
     "normalize.css": "^8.0.1",
+    "pbkdf2": "^3.1.2",
     "postcss": "^8.4.32",
     "postcss-nesting": "^12.0.1",
     "prosemirror-history": "^1.3.2",
