--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "beaver-notes-pocket",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.1-a",
   "type": "module",
   "scripts": {
     "watch": "vite",
@@ -54,6 +54,7 @@
     "@types/crypto-js": "^4.2.1",
     "@types/d3": "^7.4.3",
     "@types/pbkdf2": "^3.1.2",
+    "@types/react-transition-group": "^4.4.10",
     "@types/uuid": "^9.0.7",
     "archiver": "^6.0.1",
     "autoprefixer": "^10.4.16",
@@ -90,6 +91,7 @@
     "react-portal": "^4.2.2",
     "react-router-dom": "^6.21.0",
     "react-to-pdf": "^1.0.1",
+    "react-transition-group": "^4.4.5",
     "remixicon": "3.7.0",
     "remixicon-react": "^1.0.0",
     "rxjs": "^7.8.1",
