--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "@tiptap/extension-ordered-list": "^2.1.13",
     "@tiptap/extension-paragraph": "^2.1.13",
     "@tiptap/extension-placeholder": "2.1.13",
+    "@tiptap/extension-table": "^2.2.1",
+    "@tiptap/extension-table-cell": "^2.2.1",
+    "@tiptap/extension-table-header": "^2.2.1",
+    "@tiptap/extension-table-row": "^2.2.1",
     "@tiptap/extension-task-item": "^2.1.13",
     "@tiptap/extension-task-list": "^2.1.13",
     "@tiptap/extension-text": "^2.1.13",
