--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-swipeable": "^7.0.1",
     "react-to-pdf": "^1.0.1",
     "react-transition-group": "^4.4.5",
+    "react-use": "^17.5.0",
     "remixicon": "3.7.0",
     "remixicon-react": "^1.0.0",
     "rxjs": "^7.8.1",
