--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "autoprefixer": "^10.4.16",
     "bottom-sheet-react": "^0.1.27",
     "capacitor-native-biometric": "^4.2.2",
+    "crypto-es": "^2.1.0",
     "crypto-js": "^4.2.0",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
@@ -109,6 +110,7 @@
     "slick-bottom-sheet": "^0.1.1",
     "tiptap": "^1.32.2",
     "tiptap-commands": "^1.17.1",
+    "tiptap-extension-resize-image": "^1.0.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
