--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "autoprefixer": "^10.4.16",
     "bottom-sheet-react": "^0.1.27",
     "capacitor-native-biometric": "^4.2.2",
+    "capacitor-native-filepicker": "https://github.com/ourcodeworld/capacitor-native-filepicker",
     "crypto-es": "^2.1.0",
     "crypto-js": "^4.2.0",
     "d3": "^7.8.5",
