--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@capacitor/cli": "5.6.0",
     "@capacitor/core": "5.6.0",
     "@capacitor/device": "^5.0.6",
-    "@capacitor/filesystem": "5.2.0",
+    "@capacitor/filesystem": "^5.2.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.6.0",
     "@capacitor/keyboard": "5.0.7",
