--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aashu-dubey/capacitor-statusbar-safe-area": "^2.1.1",
     "@benrbray/prosemirror-math": "^0.2.2",
+    "@capacitor-community/file-opener": "^1.0.5",
     "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/cli": "5.6.0",
