--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "^5.0.7",
     "@capawesome-team/capacitor-file-opener": "^5.0.4",
+    "@capawesome/capacitor-file-picker": "^5.3.0",
     "@ionic/cli": "^7.1.6",
     "@ionic/react": "7.6.2",
     "@nytimes/react-prosemirror": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.12",
     "@tiptap/extension-blockquote": "^2.1.13",
     "@tiptap/extension-bubble-menu": "^2.2.4",
     "@tiptap/extension-bullet-list": "^2.2.4",
