--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "@tiptap/suggestion": "^2.1.16",
+    "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.1",
     "@types/d3": "^7.4.3",
     "@types/pbkdf2": "^3.1.2",
@@ -69,6 +70,7 @@
     "@types/uuid": "^9.0.7",
     "archiver": "^6.0.1",
     "autoprefixer": "^10.4.16",
+    "bcryptjs": "^2.4.3",
     "bottom-sheet-react": "^0.1.27",
     "capacitor-native-biometric": "^4.2.2",
     "crypto-es": "^2.1.0",
