--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ionic/react": "7.6.2",
     "@nytimes/react-prosemirror": "^0.4.2",
     "@tailwindcss/typography": "^0.5.12",
+    "@tippyjs/react": "^4.2.6",
     "@tiptap/extension-blockquote": "^2.1.13",
     "@tiptap/extension-bubble-menu": "^2.2.4",
     "@tiptap/extension-bullet-list": "^2.2.4",
@@ -106,6 +107,7 @@
     "remixicon-react": "^1.0.0",
     "rxjs": "^7.8.1",
     "slick-bottom-sheet": "^0.1.1",
+    "tippy.js": "^6.3.7",
     "tiptap": "^1.32.2",
     "tiptap-commands": "^1.17.1",
     "tiptap-extension-resize-image": "^1.0.3",
