--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "@aashu-dubey/capacitor-statusbar-safe-area": "^2.1.1",
+    "@auth0/auth0-react": "^2.2.4",
+    "@awesome-cordova-plugins/core": "^6.7.0",
+    "@awesome-cordova-plugins/zip": "^6.7.0",
     "@benrbray/prosemirror-math": "^0.2.2",
-    "@capacitor-community/file-opener": "^1.0.5",
     "@capacitor/android": "^6.0.0",
     "@capacitor/app": "^6.0.0",
+    "@capacitor/browser": "^6.0.0",
     "@capacitor/cli": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/device": "^6.0.0",
@@ -27,8 +30,7 @@
     "@capacitor/share": "^6.0.0",
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
-    "@capawesome-team/capacitor-file-opener": "^5.0.4",
-    "@capawesome/capacitor-file-picker": "^5.3.0",
+    "@derrickorama/capacitor-zip": "^0.2.1",
     "@ionic/cli": "^7.1.6",
     "@ionic/react": "7.6.2",
     "@nytimes/react-prosemirror": "^0.4.2",
@@ -63,12 +65,16 @@
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "@tiptap/suggestion": "^2.1.16",
+    "@types/adm-zip": "^0.5.5",
+    "@types/base-64": "^1.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.1",
     "@types/d3": "^7.4.3",
     "@types/react-transition-group": "^4.4.10",
     "@types/uuid": "^9.0.7",
+    "adm-zip": "^0.5.12",
     "autoprefixer": "^10.4.16",
+    "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "bottom-sheet-react": "^0.1.27",
     "capacitor-native-biometric": "^4.2.2",
@@ -76,10 +82,13 @@
     "crypto-js": "^4.2.0",
     "d3": "^7.8.5",
     "dayjs": "^1.11.10",
+    "dropbox": "^10.34.0",
     "eslint-config-react-app": "^7.0.1",
     "formidable": "v3",
     "framer-motion": "^11.1.7",
     "highlight.js": "^11.9.0",
+    "http-proxy-middleware": "^3.0.0",
+    "jszip": "^3.10.1",
     "katex": "0.16.9",
     "lowlight": "2.9.0",
     "native-run": "^2.0.0",
@@ -111,7 +120,8 @@
     "tiptap": "^1.32.2",
     "tiptap-commands": "^1.17.1",
     "tiptap-extension-resize-image": "^1.0.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "webdav": "^5.6.0"
   },
   "devDependencies": {
     "@types/katex": "^0.16.7",
