--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/ios": "^6.0.0",
     "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/preferences": "^6.0.0",
     "@capacitor/share": "^6.0.0",
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
@@ -78,6 +79,7 @@
     "bcryptjs": "^2.4.3",
     "bottom-sheet-react": "^0.1.27",
     "capacitor-native-biometric": "^4.2.2",
+    "capacitor-secure-storage-plugin": "^0.10.0",
     "crypto-es": "^2.1.0",
     "crypto-js": "^4.2.0",
     "d3": "^7.8.5",
@@ -88,6 +90,8 @@
     "framer-motion": "^11.1.7",
     "highlight.js": "^11.9.0",
     "http-proxy-middleware": "^3.0.0",
+    "icloudjs": "^1.5.1-patch1",
+    "jsDAV": "^0.3.4",
     "jszip": "^3.10.1",
     "katex": "0.16.9",
     "lowlight": "2.9.0",
