--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation project(':capacitor-status-bar')
     implementation project(':derrickorama-capacitor-zip')
     implementation project(':capacitor-native-biometric')
+    implementation project(':capacitor-secure-storage-plugin')
 
 }
 
