🚚 Organization + UI improvements

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@aashu-dubey/capacitor-statusbar-safe-area": "^2.1.1",
     "@auth0/auth0-react": "^2.2.4",
-    "@benrbray/prosemirror-math": "^0.2.2",
+    "@benrbray/prosemirror-math": "0.2.2",
     "@capacitor/android": "^6.0.0",
     "@capacitor/app": "^6.0.0",
     "@capacitor/browser": "^6.0.0",
@@ -43,7 +43,7 @@
     "@tiptap/extension-document": "^2.1.13",
     "@tiptap/extension-heading": "^2.1.13",
     "@tiptap/extension-highlight": "^2.1.13",
-    "@tiptap/extension-image": "^2.1.13",
+    "@tiptap/extension-image": "^2.4.0",
     "@tiptap/extension-link": "^2.1.13",
     "@tiptap/extension-list-item": "^2.1.13",
     "@tiptap/extension-mention": "2.1.13",
@@ -90,7 +90,7 @@
     "highlight.js": "^11.9.0",
     "http-proxy-middleware": "^3.0.0",
     "icloudjs": "^1.5.1-patch1",
-    "katex": "0.16.9",
+    "katex": "0.13.0",
     "lowlight": "2.9.0",
     "native-run": "^2.0.0",
     "normalize.css": "^8.0.1",
@@ -117,7 +117,7 @@
     "tippy.js": "^6.3.7",
     "tiptap": "^1.32.2",
     "tiptap-commands": "^1.17.1",
-    "tiptap-extension-resize-image": "^1.0.3",
+    "tiptap-extension-resize-image": "^1.1.5",
     "uuid": "^9.0.1",
     "xml2js": "^0.6.2"
   },
