--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ ios/App/App/Keys/Secrets.xcconfig
 ios/App/Keys/Secrets.xcconfig
 android/app/gradle.properties
 ios/App/App/Keys/Secrets.xcconfig
+ios/App/App/Keys/Secrets.xcconfig
