--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,6 +13,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "SERVER_CLIENT_ID", "\"${project.GOOGLE_CLIENT_ID}\""
 
+        manifestPlaceholders = [
+                ONEDRIVE_SHA1: ONEDRIVE_SHA1
+        ]
+
         signingConfigs {
             debug {
                 storeFile file("${System.properties['user.home']}/.android/debug.keystore")
