--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/crypto-js": "^4.2.1",
     "@types/d3": "^7.4.3",
     "@types/dompurify": "^3.0.5",
+    "@types/mousetrap": "^1.6.15",
     "@types/react-transition-group": "^4.4.11",
     "@types/simple-oauth2": "^5.0.7",
     "@types/uuid": "^9.0.7",
@@ -91,6 +92,7 @@
     "katex": "0.13.0",
     "lowlight": "2.9.0",
     "mermaid": "^10.9.1",
+    "mousetrap": "^1.6.5",
     "native-run": "^2.0.0",
     "pcloud-sdk-js": "^2.0.0",
     "postcss": "^8.4.32",
