🎨 Improved paper block + accessibility

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
+    "@emotion/core": "^11.0.0",
     "@headlessui/react": "^2.1.1",
     "@ionic/cli": "^7.1.6",
     "@ionic/react": "7.6.2",
@@ -77,6 +78,7 @@
     "@types/simple-oauth2": "^5.0.7",
     "@types/uuid": "^9.0.7",
     "@types/xml2js": "^0.4.14",
+    "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.8",
     "capacitor-native-biometric": "^4.2.2",
@@ -105,6 +107,7 @@
     "puppeteer": "^21.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-portal-overlay": "^1.1.0",
     "react-router-dom": "^6.21.0",
     "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
