🎨 Improved drawing component

--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -2,7 +2,7 @@ require_relative '../../node_modules/@capacitor/ios/scripts/pods_helpers'
 
 platform :ios, '13.0'
 use_frameworks!
-# workaround to avoid Xcode caching of Pods that requires
+# workaround to avoid Xcode caching of Pods that requiresx
 # Product -> Clean Build Folder after new Cordova plugins installed
 # Requires CocoaPods 1.6 or newer
 install! 'cocoapods', :disable_input_output_paths => true
