--- a/ios/App/App/App.entitlements
+++ b/ios/App/App/App.entitlements
@@ -2,11 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>aps-environment</key>
-	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.beavernotes.beaverpocket</string>
+		<string>iCloud.beaver.notes.pocket</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -15,7 +13,11 @@
 	</array>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
-		<string>iCloud.beavernotes.beaverpocket</string>
+		<string>iCloud.beaver.notes.pocket</string>
+	</array>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.beaver.notes.pocket</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
