--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
-    implementation("com.squareup.okhttp3:okhttp:4.12.0")
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
 }
 
 apply from: 'capacitor.build.gradle'
